// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email detects "" as expected 1`] = `
Object {
  "error": "String is not a valid email.",
}
`;

exports[`email detects "" as expected 2`] = `
Object {
  "error": "String is not a valid email.",
}
`;

exports[`email detects "[object Object]" as expected 1`] = `
Object {
  "error": "String is not a valid email.",
}
`;

exports[`email detects "9" as expected 1`] = `
Object {
  "error": "String is not a valid email.",
}
`;

exports[`email detects "null" as expected 1`] = `
Object {
  "error": "String is not a valid email.",
}
`;

exports[`email detects "test@" as expected 1`] = `
Object {
  "error": "String is not a valid email.",
}
`;

exports[`email detects "test@example" as expected 1`] = `
Object {
  "error": "String is not a valid email.",
}
`;

exports[`email detects "test@example.com" as expected 1`] = `Object {}`;

exports[`email detects "undefined" as expected 1`] = `Object {}`;

exports[`length detects "" as expected with [object Object] 1`] = `
Object {
  "error": "Shorter than minimum length of 5.",
}
`;

exports[`length detects "" as expected with [object Object] 2`] = `
Object {
  "error": "Shorter than minimum length of 5.",
}
`;

exports[`length detects "" as expected with [object Object] 3`] = `Object {}`;

exports[`length detects "" as expected with [object Object] 4`] = `Object {}`;

exports[`length detects "[object Object]" as expected with [object Object] 1`] = `Object {}`;

exports[`length detects "1" as expected with [object Object] 1`] = `
Object {
  "error": "Shorter than minimum length of 5.",
}
`;

exports[`length detects "1" as expected with [object Object] 2`] = `
Object {
  "error": "Shorter than minimum length of 5.",
}
`;

exports[`length detects "1" as expected with [object Object] 3`] = `Object {}`;

exports[`length detects "9" as expected with [object Object] 1`] = `Object {}`;

exports[`length detects "longertext" as expected with [object Object] 1`] = `Object {}`;

exports[`length detects "longertext" as expected with [object Object] 2`] = `Object {}`;

exports[`length detects "null" as expected with [object Object] 1`] = `
Object {
  "error": "Cannot determine length of null.",
}
`;

exports[`length detects "reallylongtextthatexceeds10" as expected with [object Object] 1`] = `
Object {
  "error": "Exceeds maximum length of 10.",
}
`;

exports[`length detects "reallylongtextthatexceeds10" as expected with [object Object] 2`] = `
Object {
  "error": "Exceeds maximum length of 10.",
}
`;

exports[`length detects "test" as expected with [object Object] 1`] = `
Object {
  "error": "Shorter than minimum length of 5.",
}
`;

exports[`length detects "test" as expected with [object Object] 2`] = `
Object {
  "error": "Shorter than minimum length of 5.",
}
`;

exports[`length detects "test" as expected with [object Object] 3`] = `Object {}`;

exports[`length detects "undefined" as expected with [object Object] 1`] = `Object {}`;

exports[`oneOf detects "" as invalid 1`] = `
Object {
  "error": "Not one of (1, 2, 3, 5).",
}
`;

exports[`oneOf detects "" as invalid 2`] = `
Object {
  "error": "Not one of (a, b, c).",
}
`;

exports[`oneOf detects "[object Object]" as invalid 1`] = `
Object {
  "error": "Not one of (1, 2, 3, 5).",
}
`;

exports[`oneOf detects "[object Object]" as invalid 2`] = `
Object {
  "error": "Not one of (a, b, c).",
}
`;

exports[`oneOf detects "-1" as invalid 1`] = `
Object {
  "error": "Not one of (1, 2, 3, 5).",
}
`;

exports[`oneOf detects "-1" as invalid 2`] = `
Object {
  "error": "Not one of (a, b, c).",
}
`;

exports[`oneOf detects "0" as invalid 1`] = `
Object {
  "error": "Not one of (1, 2, 3, 5).",
}
`;

exports[`oneOf detects "0" as invalid 2`] = `
Object {
  "error": "Not one of (a, b, c).",
}
`;

exports[`oneOf detects "1" as invalid 1`] = `
Object {
  "error": "Not one of (1, 2, 3, 5).",
}
`;

exports[`oneOf detects "1" as invalid 2`] = `
Object {
  "error": "Not one of (a, b, c).",
}
`;

exports[`oneOf detects "27" as invalid 1`] = `
Object {
  "error": "Not one of (1, 2, 3, 5).",
}
`;

exports[`oneOf detects "27" as invalid 2`] = `
Object {
  "error": "Not one of (a, b, c).",
}
`;

exports[`oneOf detects "a" as invalid 1`] = `
Object {
  "error": "Not one of ().",
}
`;

exports[`oneOf detects "null" as invalid 1`] = `
Object {
  "error": "Not one of (1, 2, 3, 5).",
}
`;

exports[`oneOf detects "null" as invalid 2`] = `
Object {
  "error": "Not one of (a, b, c).",
}
`;

exports[`oneOf detects "test" as invalid 1`] = `
Object {
  "error": "Not one of (1, 2, 3, 5).",
}
`;

exports[`oneOf detects "test" as invalid 2`] = `
Object {
  "error": "Not one of (a, b, c).",
}
`;

exports[`oneOf detects "undefined" as invalid 1`] = `Object {}`;

exports[`oneOf detects "undefined" as invalid 2`] = `Object {}`;

exports[`range detects "" as expected with [object Object] 1`] = `
Object {
  "error": "Less than minimum of 5.",
}
`;

exports[`range detects "" as expected with [object Object] 2`] = `
Object {
  "error": "Less than minimum of 5.",
}
`;

exports[`range detects "" as expected with [object Object] 3`] = `Object {}`;

exports[`range detects "" as expected with [object Object] 4`] = `Object {}`;

exports[`range detects "[object Object]" as expected with [object Object] 1`] = `Object {}`;

exports[`range detects "0" as expected with [object Object] 1`] = `
Object {
  "error": "Less than minimum of 5.",
}
`;

exports[`range detects "0" as expected with [object Object] 2`] = `
Object {
  "error": "Less than minimum of 5.",
}
`;

exports[`range detects "0" as expected with [object Object] 3`] = `Object {}`;

exports[`range detects "1" as expected with [object Object] 1`] = `
Object {
  "error": "Less than minimum of 5.",
}
`;

exports[`range detects "1" as expected with [object Object] 2`] = `
Object {
  "error": "Less than minimum of 5.",
}
`;

exports[`range detects "5" as expected with [object Object] 1`] = `Object {}`;

exports[`range detects "5" as expected with [object Object] 2`] = `Object {}`;

exports[`range detects "6" as expected with [object Object] 1`] = `Object {}`;

exports[`range detects "6" as expected with [object Object] 2`] = `Object {}`;

exports[`range detects "9" as expected with [object Object] 1`] = `Object {}`;

exports[`range detects "9" as expected with [object Object] 2`] = `Object {}`;

exports[`range detects "10" as expected with [object Object] 1`] = `Object {}`;

exports[`range detects "10" as expected with [object Object] 2`] = `Object {}`;

exports[`range detects "11" as expected with [object Object] 1`] = `
Object {
  "error": "Exceeds maximum of 10.",
}
`;

exports[`range detects "11" as expected with [object Object] 2`] = `
Object {
  "error": "Exceeds maximum of 10.",
}
`;

exports[`range detects "1000" as expected with [object Object] 1`] = `
Object {
  "error": "Exceeds maximum of 10.",
}
`;

exports[`range detects "null" as expected with [object Object] 1`] = `
Object {
  "error": "Cannot compare with null.",
}
`;

exports[`range detects "undefined" as expected with [object Object] 1`] = `Object {}`;

exports[`required detects "" as expected 1`] = `Object {}`;

exports[`required detects "" as expected 2`] = `Object {}`;

exports[`required detects "[object Object]" as expected 1`] = `Object {}`;

exports[`required detects "9" as expected 1`] = `Object {}`;

exports[`required detects "null" as expected 1`] = `
Object {
  "error": "Missing required field.",
}
`;

exports[`required detects "undefined" as expected 1`] = `
Object {
  "error": "Missing required field.",
}
`;

exports[`uuid detects "" as expected 1`] = `
Object {
  "error": "String is not a valid uuid.",
}
`;

exports[`uuid detects "" as expected 2`] = `
Object {
  "error": "String is not a valid uuid.",
}
`;

exports[`uuid detects "[object Object]" as expected 1`] = `
Object {
  "error": "String is not a valid uuid.",
}
`;

exports[`uuid detects "9" as expected 1`] = `
Object {
  "error": "String is not a valid uuid.",
}
`;

exports[`uuid detects "550e00-e29b-11d4-a716-446655440000" as expected 1`] = `
Object {
  "error": "String is not a valid uuid.",
}
`;

exports[`uuid detects "550e8400-e29b-11d4-a716-4466554400" as expected 1`] = `
Object {
  "error": "String is not a valid uuid.",
}
`;

exports[`uuid detects "550e8400-e29b-11d4-a716-446655440000" as expected 1`] = `Object {}`;

exports[`uuid detects "null" as expected 1`] = `
Object {
  "error": "String is not a valid uuid.",
}
`;

exports[`uuid detects "test" as expected 1`] = `
Object {
  "error": "String is not a valid uuid.",
}
`;

exports[`uuid detects "undefined" as expected 1`] = `Object {}`;
